WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277404
_hasActiveNowPlayingSession incorrectly set to NO when a subframe navigation occurs
https://bugs.webkit.org/show_bug.cgi?id=277404
Summary
_hasActiveNowPlayingSession incorrectly set to NO when a subframe navigation ...
Andy Estes
Reported
2024-07-31 00:50:27 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2024-07-31 00:52:25 PDT
<
rdar://problem/131082146
>
Andy Estes
Comment 2
2024-07-31 00:57:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31523
EWS
Comment 3
2024-07-31 11:46:58 PDT
Committed
281664@main
(ec9c5dbe3501): <
https://commits.webkit.org/281664@main
> Reviewed commits have been landed. Closing PR #31523 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug