_hasActiveNowPlayingSession incorrectly set to NO when a subframe navigation occurs https://bugs.webkit.org/show_bug.cgi?id=277404 rdar://131082146

Reviewed by Jean-Yves Avenard.

WebPageProxy::didCommitLoadForFrame would set WKWebView's _hasActiveNowPlayingSession property to
NO when a load committed in *any* frame, even if that frame was not playing media. Furthermore, it
would be set to NO during a same-document navigation even if the navigation did not stop media
playback.

To correct these two mistakes, moved the call to PageClient::hasActiveNowPlayingSessionChanged from
WebPageProxy::didCommitLoadForFrame to WebPageProxy::didChangeMainDocument and ensured that it's
only called on the main frame.

Added API tests.

* Source/WebKit/UIProcess/Cocoa/PageClientImplCocoa.mm:
(WebKit::PageClientImplCocoa::hasActiveNowPlayingSessionChanged):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didCommitLoadForFrame):
(WebKit::WebPageProxy::didChangeMainDocument):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/NowPlayingSession.mm:
(TEST(NowPlayingSession, NavigateToFragmentAfterHasSession)):
(TEST(NowPlayingSession, LoadSubframeAfterHasSession)):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/large-video-test-now-playing.html:

Canonical link: https://commits.webkit.org/281664@main